@@ -1,1 +1,1 @@
-cascading.release.version=0.8.1
+cascading.release.version=0.8.2
